--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
         <header>
             <div id="site">
-                <h1><img src="img/HM LOGO2.png" alt=" HM"></h1>
+                <h1><img src="img/HM N.png" alt=" HM"></h1>
             </div>
             <nav>
               <ul>
@@ -66,7 +66,7 @@
                <li><a href="...">二手家具</a></li>
           </ul>
          </div>
-         <small>連絡電話:0936206177  傳真:02-85110322 豪美辦公家具</small>
+         <small>連絡電話:0936206177  傳真:02-85110322 豪美傢俱裝璜行</small>
       </footer>
     </div>
 </body>
