--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
         <header>
             <div id="site">
-                <h1><img src="img/HM N.png" alt=" HM"></h1>
+                <h1><img src="img/HM N6.png" alt=" HM"></h1>
             </div>
             <nav>
               <ul>
@@ -29,7 +29,7 @@
         </header>
         <main>
           <div id="headerpost">
-            <img src="img/2017/0418928_PE575936_S5.png" alt="三重豪美傢俱裝潢 辦公家具 HM">
+            <img src="img/2017/0418928_PE575936_S5-min.png" alt="三重豪美傢俱裝潢 辦公家具 HM">
              <div id="lead">
              <h2>辦公室捲簾系列居家、辦公室、廠房皆適合 NT1500起</h2>
               <p></p>
