--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="container">
         <header>
             <div id="site">
+                <a href="https://jason0068.github.io/Jason0068-2/index.html">
                 <h1><img src="img/HM N6.png" alt=" HM"></h1>
             </div>
             <nav>
@@ -34,7 +35,7 @@
              <h2>構想出屬於自己獨特的辦公環境</h2>
               <p></p>
                     
-              <p class="more"><a href="https://jason0068.github.io/HM1/" target="_blank" title="固定式高隔間">固定式高隔間 免費現場估價</a></p>
+              <p class="more"><a href="https://jason0068.github.io/HM1/" target="_blank" title="固定式高隔間">固定式高隔間/屏風 免費現場估價</a></p>
                </div>
           </div>
           <div id="content">
