--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 
 <head>
-    <title>三重豪美傢俱裝潢 辦公家具/代客搬家  HM Furniture 1 固定式高隔間</title>
+    <title>台北三重HM傢俱裝潢 辦公家具/HM Furniture 1 固定式高隔間</title>
     <meta charset="utf-8">
-    <meta name="KeyWords" content="三重豪美傢俱裝潢,辦公家具,HM " >
+    <meta name="KeyWords" content="台北三重HM傢俱裝潢,辦公家具,HM " >
     <link rel="stylesheet" href="style-l.css">
     <link rel="stylesheet" href="style-m.css" media="only screen and (min-width:600px) and (max-width:980px)">
     <link rel="stylesheet" href="style-s.css" media="only screen and (max-width:640px)">
@@ -154,7 +154,7 @@
                <li><a href="...">二手家具</a></li>
           </ul>
          </div>
-         <small>連絡電話:0936206177  傳真:02-85110322 豪美傢俱裝璜行</small>
+         <small>連絡電話:0936206177  傳真:02-85110322 台北三重HM傢俱裝潢</small>
       </footer>
     </div>
 </body>
