--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <main>
           <div id="headerpost">
-            <img src="img/2017/1.png" alt="三重豪美傢俱裝潢 辦公家具 HM">
+            <img src="img/2017/1.png" alt="三重HM傢俱裝潢 辦公家具 HM">
              <div id="lead">
              <h2>構想出屬於自己獨特的辦公環境</h2>
               <p></p>
